convert accommodation, place, restaurant into activity_detail
