# backend/docs/swagger.yaml
@@ -69,6 +69,35 @@ definitions:
         description: e.g., "place", "accommodation", "restaurant"
         type: string
     type: object
+  dto.ActivityDetail:
+    properties:
+      additional_info:
+        type: string
+      address:
+        type: string
+      description:
+        type: string
+      id:
+        type: string
+      image_urls:
+        items:
+          type: string
+        type: array
+      location:
+        type: string
+      name:
+        type: string
+      opening_hours:
+        type: string
+      price:
+        type: number
+      rating:
+        type: number
+      type:
+        type: string
+      url:
+        type: string
+    type: object
   dto.ExpenseBalanceDTO:
     properties:
       net_balance:
@@ -1213,7 +1242,7 @@ paths:
             - $ref: '#/definitions/model.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/model.Accommodation'
+                  $ref: '#/definitions/dto.ActivityDetail'
               type: object
         "400":
           description: Bad Request
@@ -1247,7 +1276,7 @@ paths:
             - $ref: '#/definitions/model.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/model.Place'
+                  $ref: '#/definitions/dto.ActivityDetail'
               type: object
         "400":
           description: Bad Request
@@ -1281,7 +1310,7 @@ paths:
             - $ref: '#/definitions/model.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/model.Restaurant'
+                  $ref: '#/definitions/dto.ActivityDetail'
               type: object
         "400":
           description: Bad Request
